--- a/Trend-Modal-Sedikit-Bisa-Untung-Selangit-Hadir-di-Mahjong.html
+++ b/Trend-Modal-Sedikit-Bisa-Untung-Selangit-Hadir-di-Mahjong.html
@@ -111,7 +111,7 @@
         .btn-body{margin:15px 0;position:relative;display:flex}
         .btn-body .btn-items{margin:0 5px;width:100%}
         .btn-body .btn-items a{text-decoration:none;width:100%;padding:10px 5px;color:#000000;background:-webkit-linear-gradient(top,#fa6502,rgb(255, 174, 0) 100%);border-radius:5px;display:inline-block;text-align:center;overflow:hidden;position:relative}
-        .btn-body .btn-items a::before{content:"position:absolute;top:0;left:0;width:100%;height:100%;background-color:#22b3df;opacity:0;-webkit-transition:0.2s opacity ease-in-out;transition:0.2s opacity ease-in-out}
+        .btn-body .btn-items a::before{content;position:absolute;top:0;left:0;width:100%;height:100%;background-color:#22b3df;opacity:0;-webkit-transition:0.2s opacity ease-in-out;transition:0.2s opacity ease-in-out}
         .btn-items a span{position:absolute}
         .btn-items a span:nth-child(1){top:0;left:0;width:100%;height:100px;background:-webkit-gradient(linear,right top,left top,from(rgba(43,8,8,0)),to(#0f0));background:linear-gradient(to left,rgba(43,8,8,0),#fff);-webkit-animation:2s animateTop linear infinite;animation:2s animateTop linear infinite}
         .btn-items a span:nth-child(2){top:0;right:0;height:100%;width:3px;background:-webkit-gradient(linear,left bottom,left top,from(rgba(43,8,8,0)),to(#0f0));background:linear-gradient(to top,rgba(43,8,8,0),#fff);-webkit-animation:2s animateRight linear -1s infinite;animation:2s animateRight linear -1s infinite}
